[tool.poetry]
name = "clearml-project"
version = "0.1.0"
description = ""
authors = ["ivan golt <102701882+ivangolt@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "clearml_project"}]

[tool.poetry.dependencies]
python = "^3.11"
clearml = "^1.16.2"
nltk = "^3.8.1"
polars = "^1.2.0"
hydra-core = "^1.3.2"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
numpy = "^2.0.0"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
